--- a/src/dialogs/dialog-submit.html
+++ b/src/dialogs/dialog-submit.html
@@ -1,6 +1,9 @@
-<div class="dialog dialog-xs flex flex-col items-center justify-center rounded-3 py-10 px-5 dark:bg-black dark:text-white">
-  <svg class="icon text-green text-9xl mb-5">
-    <use xlink:href="img/icons.svg#success">
-  </svg>
-  <h2 class="font-alt font-semibold text-24 leading-3">Ваша заявка успешно отправлена!</h2>
+<div class="dialog dialog-sm relative rounded-4 md:rounded-8 overflow-hidden py-20 px-4 md:py-32 md:px-16">
+  <div class="gradient absolute -top-[240px] sm:-top-[550px] left-0 right-0 opacity-40 blur-[100px] rotate-180 w-[330px] h-[330px] sm:w-[645px] sm:h-[645px] mx-auto"></div>
+  <div class="flex flex-col items-center justify-center relative">
+    <svg class="icon text-primary text-9xl md:text-[160px] mb-8">
+      <use xlink:href="img/icons.svg#success">
+    </svg>
+    <h2 class="font-alt font-medium uppercase text-center text-24 md:text-26 lg:text-28 leading-3 tracking-tight">заявка успешно <br> отправлена</h2>
+  </div>
 </div>
