--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
     <h1 class="font-alt uppercase text-center text-30 sm:text-40 lg:text-50 mb-10 sm:mb-16 lg:mb-20 ease-out duration-4 delay-2 anim anim--up" data-anim="hidden">ДЕТЕЙЛИНГ В КРАСНОДАРЕ</h1>
     <h3 class="font-alt font-medium text-center text-16 sm:text-22 lg:text-28 leading-3 mb-16 sm:mb-10 ease-out duration-4 delay-3 anim anim--up" data-anim="hidden">Узнай сколько это будет стоить</h3>
     <div class="ease-out duration-4 delay-6 anim anim--up" data-anim="hidden">
-      <button class="btn btn-main btn-xl sm:btn-xxl btn-fill uppercase text-14 sm:text-16 w-full max-w-[430px] px-5" data-waved="dark" data-fancybox-dialog data-type="ajax" data-src="dialogs/dialog-quiz.html">Предварительная оценка</button>
+      <button class="btn btn-main btn-xl sm:btn-xxl btn-fill uppercase text-14 sm:text-16 w-full max-w-[430px] px-5" data-waved="dark" data-fancybox-quiz data-type="ajax" data-src="dialogs/dialog-quiz.html">Предварительная оценка</button>
     </div>
   </div>
   <div class="main-slider main-slider--grey absolute bottom-16 left-0 right-0 pointer-events-none w-full">
