--- a/src/dialogs/dialog-politics.html
+++ b/src/dialogs/dialog-politics.html
@@ -1,16 +1,21 @@
-<div class="dialog dialog-xl rounded-3 p-5 md:p-10 dark:bg-black dark:text-white">
-  <h2 class="font-alt font-bold text-center text-30 leading-2 mb-4">Соглашение</h2>
-  <h3 class="font-alt font-bold text-center text-24 leading-2 mb-5">об обработке персональных данных</h3>
-  <p class="font-normal text-14 md:text-16 leading-5 mb-5">
-    Данное соглашение об обработке персональных данных разработано в соответствии с законодательством Российской Федерации.
-  </p>
-  <p class="font-normal text-14 md:text-16 leading-5 mb-5">
-    Все лица заполнившие сведения, составляющие персональные данные на данном сайте, а также разместившие иную информацию обозначенными действиями, подтверждают свое согласие на обработку персональных данных и их передачу оператору обработки персональных данных.<br>
-    Под персональными данными Гражданина понимается нижеуказанная информация:
-  </p>
-  <p class="font-normal text-14 md:text-16 leading-5">
-    Общая информация (Имя, номер телефона и адрес электронной почты); посетители сайта направляют свои персональные данные для получения телефонного звонка или сообщения электронной почты от специалиста компании-исполнителя (владельца сайта) с целью заказа консультации относительно услуг компании-исполнителя.<br>
-    Гражданин, принимая настоящее Соглашение, выражает свою заинтересованность и полное согласие, что обработка их персональных данных может включать в себя следующие действия: сбор, систематизацию, накопление, хранение, уточнение (обновление, изменение), использование, уничтожение.<br>
-    Гражданин гарантирует: информация, им предоставленная, не нарушает действующее законодательство Российской Федерации, законные права и интересы третьих лиц; вся предоставленная информация заполнена Гражданином в отношении себя лично.
-  </p>
+<div class="dialog dialog-lg relative rounded-4 md:rounded-8 overflow-hidden py-10 px-4 md:px-10 lg:py-20 lg:px-16">
+  <div class="gradient absolute -top-[240px] sm:-top-[550px] left-0 right-0 opacity-40 blur-[100px] rotate-180 w-[330px] h-[330px] sm:w-[645px] sm:h-[645px] mx-auto"></div>
+  <div class="relative">
+    <h2 class="font-alt font-medium uppercase text-center text-20 sm:text-24 lg:text-28 leading-3 tracking-tight mb-6 md:mb-8 lg:mb-14">Cоглашение на обработку <br class="hidden sm:block"> персональных данных</h2>
+    <p class="font-normal text-14 sm:text-16 leading-5 opacity-70 mb-5">
+      Данное соглашение об обработке персональных данных разработано в соответствии с законодательством Российской Федерации.
+    </p>
+    <p class="font-normal text-14 sm:text-16 leading-5 opacity-70 mb-5">
+      Все лица заполнившие сведения, составляющие персональные данные на данном сайте, а также разместившие иную информацию обозначенными действиями, подтверждают свое согласие на обработку персональных данных и их передачу оператору обработки персональных данных. 
+    </p>
+    <p class="font-normal text-14 sm:text-16 leading-5 opacity-70 mb-5">
+      Под персональными данными Гражданина понимается нижеуказанная информация: Общая информация (Имя, номер телефона и адрес электронной почты); посетители сайта направляют свои персональные данные для получения телефонного звонка или сообщения электронной почты от специалиста компании-исполнителя (владельца сайта) с целью заказа консультации относительно услуг компании-исполнителя.
+    </p>
+    <p class="font-normal text-14 sm:text-16 leading-5 opacity-70 mb-5">
+      Гражданин, принимая настоящее Соглашение, выражает свою заинтересованность и полное согласие, что обработка их персональных данных может включать в себя следующие действия: сбор, систематизацию, накопление, хранение, уточнение (обновление, изменение), использование, уничтожение.
+    </p>
+    <p class="font-normal text-14 sm:text-16 leading-5 opacity-70">
+      Гражданин гарантирует: информация, им предоставленная, не нарушает действующее законодательство Российской Федерации, законные права и интересы третьих лиц; вся предоставленная информация заполнена Гражданином в отношении себя лично.
+    </p>
+  </div>
 </div>
