--- a/src/dialogs/dialog-quiz.html
+++ b/src/dialogs/dialog-quiz.html
@@ -107,7 +107,7 @@
           </div>
           <div class="swiper-slide h-auto px-4 md:px-10 lg:px-16" data-quiz-slide>
             <div class="w-full h-full">
-              <h3 class="font-alt font-medium uppercase text-center text-24 md:text-26 lg:text-28 leading-3 tracking-tight mb-9 md:mb-12 lg:mb-16">ЕСТЬ ЛИ У ВАС <span class="hidden md:block">ДОПОЛНИТЕЛЬНЫЙ</span><br class="md:hidden"><span class="md:hidden">ДОП.</span> КОММЕНТАРИЙ?</h3>
+              <h3 class="font-alt font-medium uppercase text-center text-24 md:text-26 lg:text-28 leading-3 tracking-tight mb-9 md:mb-12 lg:mb-16">ЕСТЬ ЛИ У ВАС <span class="hidden md:inline">ДОПОЛНИТЕЛЬНЫЙ</span><br class="md:hidden"><span class="md:hidden">ДОП.</span> КОММЕНТАРИЙ?</h3>
               <label class="form-label mb-5" data-label="input">
                 <span class="font-semibold text-16 leading-4 mb-2">Ваш комментарий</span>
                 <div class="form-wrapper">
