--- a/src/dialogs/dialog-quiz.html
+++ b/src/dialogs/dialog-quiz.html
@@ -164,6 +164,15 @@
             <div class="w-full h-full">
               <h3 class="font-alt font-medium uppercase text-center text-24 md:text-26 lg:text-28 leading-3 tracking-tight mb-9 md:mb-12 lg:mb-16">Ваш номер телефона</h3>
               <div class="w-full max-w-[390px] mx-auto">
+                <label class="form-label mb-6" data-label="input">
+                  <span class="font-semibold text-16 leading-4 mb-2">Введите ваше имя</span>
+                  <div class="form-wrapper">
+                    <div class="input-cover">
+                      <input class="input" data-input="name" type="text" placeholder="Ваше имя" name="name">
+                    </div>
+                    <span class="form-error" data-error>Пожалуйста, введите вае имя!</span>
+                  </div>
+                </label>
                 <label class="form-label mb-5" data-label="input">
                   <span class="font-semibold text-16 leading-4 mb-2">Введите телефон</span>
                   <div class="form-wrapper">
